04-Resources/create-instance-sg-eip-ingress.yml

AWSTemplateFormatVersion: 2010-09-09
Description: EC2 instance with all the details
Resources:
 Ec2InstanceID:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-01aab85a5e4a5a0fe
      InstanceType: t2.micro
      KeyName: cfn-key-1
      SecurityGroups:
        - defaults
        - !Ref SSHSecurityGroup
      # Tags:
      #   - EC2Instance1
 SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: sshing sg
      GroupName: sshgrpname
      # SecurityGroupEgress:
      #   - IpProtocol: tcp
      #     FromPort: '0'
      #     ToPort: '0'
      #     CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8080'
          ToPort: '8080'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8081'
          ToPort: '8081'
          CidrIp: 0.0.0.0/0   
 ElasticIPID:
   Type: AWS::EC2::EIP
   Properties:
     Domain: String
     InstanceId: !Ref Ec2InstanceID
    #  Tags:
    #    - customIp
